Fix mobile settings button overlap

--- a/src/index.css
+++ b/src/index.css
@@ -173,14 +173,17 @@ body {
 
 @media (max-width: 767px) {
 	.navbar-fulltext-search-item-mobile {
-    position: absolute;
-    top: -5px;
-		margin-left: 3em;
-		margin-right: 4px;
+		position: absolute;
+		top: -5px;
+		left: 9.5em;
+		right: 3.25em;
+		margin: 0;
+		display: block;
 	}
 
 	.navbar-fulltext-search-item-mobile .fulltext-search {
-		width: 124px;
+		width: auto;
+		min-width: 0;
 		margin-top: 10px;
 		margin-right: 0;
 	}
@@ -198,8 +201,9 @@ body {
 
 	.navbar-fulltext-search-item-mobile .fulltext-search-panel {
 		width: min(300px, calc(100vw - 12px));
-		right: auto;
-		left: -5em;
+		max-width: calc(100vw - 12px);
+		right: -40px;
+		left: auto;
 	}
 }
 
